# neural-memory

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.rune/: plan-brain-oracle.md  plan-cascading-retrieval.md  plan-v4.md
benchmarks/: stress_at_scale.py
chatbot/: app.py  requirements.txt  train_docs_brain.py
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: types.ts
dashboard/src/api/hooks/: useDashboard.ts
dashboard/src/components/layout/: AppShell.tsx  Sidebar.tsx
dashboard/src/features/graph/: GraphPage.tsx
dashboard/src/features/health/: HealthPage.tsx
dashboard/src/features/oracle/: OraclePage.tsx
dashboard/src/features/oracle/components/: CardBack.tsx  CardFace.tsx  FlipCard.tsx  ModeSelector.tsx
dashboard/src/features/oracle/engine/: card-generator.ts  types.ts
dashboard/src/features/oracle/hooks/: useOracleData.ts
dashboard/src/features/settings/: SettingsPage.tsx
dashboard/src/features/timeline/: TimelinePage.tsx
dashboard/src/features/tool-stats/: ToolStatsPage.tsx
dashboard/src/i18n/: en.json  vi.json
docs/: benchmarks.md  changelog.md
docs/api/: mcp-tools.md
docs/getting-started/: cli-reference.md  quickstart.md
docs/guides/: cognitive-reasoning.md  learning-habits.md  mcp-server.md  schema-v21-migration.md
scripts/: gen_cli_docs.py  gen_mcp_docs.py  pre_ship.py
src/neural_memory/: __init__.py  unified_config.py
src/neural_memory/cli/: markdown_export.py
src/neural_memory/cli/commands/: brain.py  info.py  memory.py  tools.py
src/neural_memory/core/: __init__.py  source.py  synapse.py
src/neural_memory/engine/: consolidation.py  cross_brain.py  diagnostics.py  doc_extractor.py  doc_trainer.py  drift_detection.py  pipeline_steps.py  retrieval.py  semantic_discovery.py  sufficiency.py
src/neural_memory/engine/embedding/: config.py  gemini_embedding.py
src/neural_memory/hooks/: stop.py
src/neural_memory/integration/: telegram.py
src/neural_memory/mcp/: auto_handler.py  drift_handler.py  prompt.py  server.py  tool_handlers.py  tool_schemas.py
src/neural_memory/server/: app.py  models.py
src/neural_memory/server/routes/: dashboard_api.py  memory.py
src/neural_memory/storage/: base.py  memory_collections.py  sqlite_brain_ops.py  sqlite_calibration.py  sqlite_drift.py  sqlite_fibers.py  sqlite_row_mappers.py  sqlite_schema.py  sqlite_sources.py  sqlite_store.py  sqlite_training_files.py  sqlite_typed.py
src/neural_memory/storage/falkordb/: falkordb_fibers.py
tests/e2e/: test_api.py
tests/unit/: test_adaptive_depth_v2.py  test_baby_mi_features.py  test_cross_brain.py  test_drift_detection.py  test_embedding_provider.py  test_event_timestamp.py  test_health_fixes.py  test_health_roadmap.py  test_markdown_export.py  test_mcp.py  test_performance_fixes.py  test_show_handler.py  test_source_registry.py  test_sufficiency_advanced.py  test_tag_filter_query.py  test_telegram.py  test_tool_tiers.py
